# pastezi

./: .gitignore  LICENSE.txt  Pipfile  README.md  __main__.py  app.py  content.py  helper.py  layout.py  pyproject.toml  requirements.txt  setup.py
pastezi/: __init__.py  __main__.py  app.py  content.py  db.py  helper.py  layout.py
pastezi/static/: fonts.css  robots.txt  script.js  serviceworker.js  sitemap.xml  style.css
pastezi/static/icons/: browserconfig.xml
static/: highlight.css  manifest.json  script.js  serviceworker.js  style.css
